# web_10

./: from_mongo.py  pyproject.toml  to_postgres.py
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: admin.py  models.py  urls.py
quotes/quotesapp/migrations/: 0001_initial.py
quotes/quotesapp/templates/quotesapp/: index.html
